k8s/cloudflared-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"cloudflared-tunnel","namespace":"kube-system"},"spec":{"selector":{"matchLabels":{"app":"cloudflared"}},"template":{"metadata":{"labels":{"app":"cloudflared"}},"spec":{"containers":[{"args":["tunnel","--no-autoupdate","run","--token","eyJhIjoiMDQzY2NiYzEzNjIxZDYyYmM0MGFmODM1NGQ3MzY4NjciLCJ0IjoiOGZkYWE0NjYtZjQ1Mi00NTRhLTk5ZWEtNmUxOTFmNDVhNTk0IiwicyI6Ik5EazRNekkzWkRFdFpESmxPQzAwWldRekxXSmtPREl0TVRGaFpUQmtaREptTj [...]
  creationTimestamp: "2026-03-27T02:34:56Z"
  generation: 2
  name: cloudflared-tunnel
  namespace: kube-system
  resourceVersion: "4821310"
  uid: 0d7ff16c-240b-4a72-8567-8f279ecab667
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cloudflared
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
      - args:
        - tunnel
        - --no-autoupdate
        - run
        - --token
        - eyJhIjoiMDQzY2NiYzEzNjIxZDYyYmM0MGFmODM1NGQ3MzY4NjciLCJ0IjoiOGZkYWE0NjYtZjQ1Mi00NTRhLTk5ZWEtNmUxOTFmNDVhNTk0IiwicyI6Ik5EazRNekkzWkRFdFpESmxPQzAwWldRekxXSmtPREl0TVRGaFpUQmtaREptTjJOaSJ9
        image: cloudflare/cloudflared:latest
        imagePullPolicy: Always
        name: cloudflared
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-03-27T02:34:56Z"
    lastUpdateTime: "2026-03-27T02:38:29Z"
    message: ReplicaSet "cloudflared-tunnel-776dd95475" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-07-13T05:41:52Z"
    lastUpdateTime: "2026-07-13T05:41:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
